--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/solmate"]
 	path = lib/solmate
 	url = https://github.com/transmissions11/solmate
+[submodule "lib/wallet-contracts"]
+	path = lib/wallet-contracts
+	url = https://github.com/0xsequence/wallet-contracts
