--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,9 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+solc = "0.8.18"
+via_ir = true
+optimizer = true
+optimizer_runs = 1
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
