--- a/foundry.toml
+++ b/foundry.toml
@@ -7,4 +7,7 @@ solc = "0.8.18"
 optimizer = true
 optimizer_runs = 1
 
+# ERC-7655 tests use actual Polygon data
+chain_id = 137
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
